add requirements to readme